@@ -62,6 +62,7 @@ export(
     rare_transitions,
     remove_transitions,
     remove_selftransitions,
+    smooth_transitions,
 
     object.size,	### S4 generic for object size in base
 
