@@ -1,6 +1,7 @@
 Changes in version 1.0-8
     * score: match_clusters can now be "exact", "nn" or "weighted", where 
   weighted replaces all the weighted scores. 
+    * added smooth_transitions
 
 Changes in version 1.0-7
     * improved plot for tNN
